fix: remove hover on mobile

--- a/renderer/main.css
+++ b/renderer/main.css
@@ -50,8 +50,10 @@ select {
   @apply bg-transparent border-none;
 }
 
-a:hover {
-  text-decoration: underline;
+@media (hover: hover) {
+  a:hover {
+    text-decoration: underline;
+  }
 }
 
 .text--aws {
